@@ -1,137 +1,126 @@
 package com.dotmarketing.common.reindex;
 
-
+import com.dotcms.content.index.domain.IndexBulkItemResult;
+import com.dotcms.content.index.domain.IndexBulkListener;
 import com.dotmarketing.beans.Host;
-import com.dotmarketing.business.CacheLocator;
-import com.google.common.collect.ImmutableList;
 import com.dotmarketing.business.APILocator;
+import com.dotmarketing.business.CacheLocator;
 import com.dotmarketing.exception.DotDataException;
-
 import com.dotmarketing.util.Logger;
 import com.liferay.util.StringPool;
-
 import io.vavr.control.Try;
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import org.elasticsearch.action.DocWriteResponse;
-import org.elasticsearch.action.bulk.BulkItemResponse;
-import org.elasticsearch.action.bulk.BulkProcessor;
-import org.elasticsearch.action.bulk.BulkRequest;
-import org.elasticsearch.action.bulk.BulkResponse;
-
 
 /**
- * {@link BulkProcessor.Listener} that handles the logic before/after reindexing content
+ * {@link IndexBulkListener} that handles the business logic before/after reindexing content.
+ *
+ * <p>This class contains no vendor-specific imports: it receives neutral
+ * {@link IndexBulkItemResult} values from the active
+ * {@link com.dotcms.content.index.ContentletIndexOperations} adapter, which is
+ * responsible for mapping library-specific bulk-response types.</p>
+ *
  * @author nollymar
  */
-public class BulkProcessorListener implements BulkProcessor.Listener {
+public class BulkProcessorListener implements IndexBulkListener {
 
     final Map<String, ReindexEntry> workingRecords;
 
-    final static List<String> RESERVED_IDS = List.of(Host.SYSTEM_HOST);
+    static final List<String> RESERVED_IDS = List.of(Host.SYSTEM_HOST);
 
     private long contentletsIndexed;
+    private int lastBatchSize;
 
-    BulkProcessorListener () {
+    BulkProcessorListener() {
         this.workingRecords = new HashMap<>();
     }
 
-    public long getContentletsIndexed(){
+    public long getContentletsIndexed() {
         return contentletsIndexed;
     }
 
     @Override
-    public void beforeBulk(final long executionId, final BulkRequest request) {
-      
-        String serverId=APILocator.getServerAPI().readServerId();
-        List<String> servers = Try.of(()->APILocator.getServerAPI().getReindexingServers()).getOrElse(ImmutableList.of(APILocator.getServerAPI().readServerId()));
+    public void beforeBulk(final long executionId, final int actionCount) {
+        final String serverId = APILocator.getServerAPI().readServerId();
+        final List<String> servers = Try.of(
+                () -> APILocator.getServerAPI().getReindexingServers())
+                .getOrElse(List.of(serverId));
         Logger.info(this.getClass(), "-----------");
-        Logger.info(this.getClass(), "Reindexing Server #  : " + (servers.indexOf(serverId)+1) + " of " + servers.size());
+        Logger.info(this.getClass(), "Reindexing Server #  : "
+                + (servers.indexOf(serverId) + 1) + " of " + servers.size());
         Logger.info(this.getClass(), "Total Indexed        : " + contentletsIndexed);
         Logger.info(this.getClass(), "ReindexEntries found : " + workingRecords.size());
-        Logger.info(this.getClass(), "BulkRequests created : " + request.numberOfActions());
-        
-        contentletsIndexed += request.numberOfActions();
+        Logger.info(this.getClass(), "BulkRequests created : " + actionCount);
+        this.lastBatchSize = actionCount;
+        contentletsIndexed += actionCount;
         final Optional<String> duration = APILocator.getContentletIndexAPI().reindexTimeElapsed();
         if (duration.isPresent()) {
-            Logger.info(this,        "Full Reindex Elapsed : " + duration.get() + "");
+            Logger.info(this, "Full Reindex Elapsed : " + duration.get());
         }
         Logger.info(this.getClass(), "-----------");
     }
 
     @Override
-    public void afterBulk(final long executionId, final BulkRequest request, final BulkResponse response) {
+    public void afterBulk(final long executionId, final List<IndexBulkItemResult> results) {
         Logger.debug(this.getClass(), "Bulk process completed");
         final List<ReindexEntry> successful = new ArrayList<>();
-        float totalResponses=0;
-        for (BulkItemResponse bulkItemResponse : response) {
-            DocWriteResponse itemResponse = bulkItemResponse.getResponse();
+        float totalResponses = 0;
+
+        for (final IndexBulkItemResult result : results) {
             totalResponses++;
-            String id;
-            if (bulkItemResponse.isFailed() || itemResponse == null) {
+            final String reservedId = getMatchingReservedIdIfAny(result.id());
+            final String id = reservedId != null
+                    ? reservedId
+                    : result.id().substring(0, result.id().indexOf(StringPool.UNDERLINE));
 
-                final String reservedId = getMatchingReservedIdIfAny(bulkItemResponse.getFailure().getId());
-
-                id = reservedId!=null ? reservedId: bulkItemResponse.getFailure().getId().substring(0,
-                        bulkItemResponse.getFailure().getId().indexOf(StringPool.UNDERLINE));
-            } else {
-                final String reservedId = getMatchingReservedIdIfAny(itemResponse.getId());
-
-                id = reservedId!=null ? reservedId: itemResponse.getId()
-                        .substring(0, itemResponse.getId().indexOf(StringPool.UNDERLINE));
-            }
-
-            ReindexEntry idx = workingRecords.get(id);
+            final ReindexEntry idx = workingRecords.get(id);
             if (idx == null) {
                 continue;
             }
-            if (bulkItemResponse.isFailed() || itemResponse == null) {
-                handleFailure(idx,
-                        "bulk index failure:" + bulkItemResponse.getFailure().getMessage());
+            if (result.failed()) {
+                handleFailure(idx, "bulk index failure:" + result.failureMessage());
             } else {
                 successful.add(idx);
             }
         }
+
         handleSuccess(successful);
-        // 50% failure rate forces a rebuild of the BulkProcessor
-        if(totalResponses==0 || (successful.size() / totalResponses < .5)) {
-          ReindexThread.rebuildBulkIndexer();
+        // 50% failure rate forces a rebuild of the BulkProcessor.
+        // Guard: skip rebuild when the batch was empty — an empty response list
+        // with lastBatchSize == 0 is not an error condition.
+        if (lastBatchSize > 0 && (totalResponses == 0 || (successful.size() / totalResponses < .5))) {
+            ReindexThread.rebuildBulkIndexer();
         }
-    }
-
-    static String getMatchingReservedIdIfAny(String id) {
-        String matchingReservedId = null;
-
-        for (final String reservedId : RESERVED_IDS) {
-            if(id.contains(reservedId)) {
-                matchingReservedId = reservedId;
-                break;
-            }
-        }
-
-        return matchingReservedId;
     }
 
     @Override
-    public void afterBulk(final long executionId, final BulkRequest request, final Throwable failure) {
-        Logger.error(ReindexThread.class, "Bulk  process failed entirely:" + failure.getMessage(),
-                failure);
+    public void afterBulk(final long executionId, final Throwable failure) {
+        Logger.error(ReindexThread.class,
+                "Bulk process failed entirely: " + failure.getMessage(), failure);
         workingRecords.values().forEach(idx -> handleFailure(idx, failure.getMessage()));
     }
 
-    private void handleSuccess(final List<ReindexEntry> successful) {
+    static String getMatchingReservedIdIfAny(final String id) {
+        for (final String reservedId : RESERVED_IDS) {
+            if (id.contains(reservedId)) {
+                return reservedId;
+            }
+        }
+        return null;
+    }
 
+    private void handleSuccess(final List<ReindexEntry> successful) {
         try {
             if (!successful.isEmpty()) {
                 APILocator.getReindexQueueAPI().deleteReindexEntry(successful);
                 CacheLocator.getESQueryCache().clearCache();
             }
         } catch (DotDataException e) {
-            Logger.warnAndDebug(this.getClass(), "unable to delete indexjournal:" + e.getMessage(), e);
+            Logger.warnAndDebug(this.getClass(),
+                    "unable to delete indexjournal: " + e.getMessage(), e);
         }
     }
 
@@ -139,7 +128,8 @@ public class BulkProcessorListener implements BulkProcessor.Listener {
         try {
             APILocator.getReindexQueueAPI().markAsFailed(idx, cause);
         } catch (DotDataException e) {
-            Logger.warnAndDebug(this.getClass(), "unable to reque indexjournal:" + idx, e);
+            Logger.warnAndDebug(this.getClass(),
+                    "unable to requeue indexjournal: " + idx, e);
         }
     }
 }
